--- a/CalculateSumMASM/CalculateSumMASM.vcxproj.filters
+++ b/CalculateSumMASM/CalculateSumMASM.vcxproj.filters
@@ -19,4 +19,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <MASM Include="Adder.asm">
+      <Filter>Source Files</Filter>
+    </MASM>
+  </ItemGroup>
 </Project>
